add new website from server na

--- a/xem-phim-bo/tien-nghich/index.html
+++ b/xem-phim-bo/tien-nghich/index.html
@@ -1185,7 +1185,7 @@ window._wpemojiSettings = {"baseUrl":"https:\/\/s.w.org\/images\/core\/emoji\/15
              Lượt xem:
             </dt>
             <dd class="movie-dd">
-             7
+             8
             </dd>
             <br/>
            </dl>
@@ -1655,62 +1655,18 @@ window._wpemojiSettings = {"baseUrl":"https:\/\/s.w.org\/images\/core\/emoji\/15
        <div class="right-box-content">
         <ul class="list-top-movie" id="list-top-film-week">
          <li class="list-top-movie-item" id="list-top-movie-item-1">
-          <a class="list-top-movie-link" href="/phim-moi/mark-felt-ke-danh-bai-nha-trang" title="Mark Felt: Kẻ đánh bại Nhà Trắng">
+          <a class="list-top-movie-link" href="/phim-moi/hoi-ban-bangkok" title="Hội bạn Bangkok">
            <span class="status">
             HD Vietsub
            </span>
-           <div class="list-top-movie-item-thumb" style="background-image: url('https://img.ophim.live/uploads/movies/mark-felt-ke-danh-bai-nha-trang-thumb.jpg')">
+           <div class="list-top-movie-item-thumb" style="background-image: url('https://img.ophim.live/uploads/movies/hoi-ban-bangkok-thumb.jpg')">
            </div>
            <div class="list-top-movie-item-info">
             <span class="list-top-movie-item-vn">
-             Mark Felt: Kẻ đánh bại Nhà Trắng
+             Hội bạn Bangkok
             </span>
             <span class="list-top-movie-item-en">
-             Mark Felt: The Man Who Brought Down the White House
-            </span>
-            <span class="list-top-movie-item-view">
-             1 lượt xem
-            </span>
-            <span class="rate-vote rate-vote-0">
-            </span>
-           </div>
-          </a>
-         </li>
-         <li class="list-top-movie-item" id="list-top-movie-item-1">
-          <a class="list-top-movie-link" href="/phim-moi/chuyen-tinh-nang-anna-karenina" title="Chuyện Tình Nàng Anna Karenina">
-           <span class="status">
-            HD Vietsub
-           </span>
-           <div class="list-top-movie-item-thumb" style="background-image: url('https://img.ophim.live/uploads/movies/chuyen-tinh-nang-anna-karenina-thumb.jpg')">
-           </div>
-           <div class="list-top-movie-item-info">
-            <span class="list-top-movie-item-vn">
-             Chuyện Tình Nàng Anna Karenina
-            </span>
-            <span class="list-top-movie-item-en">
-             Anna Karenina
-            </span>
-            <span class="list-top-movie-item-view">
-             1 lượt xem
-            </span>
-            <span class="rate-vote rate-vote-0">
-            </span>
-           </div>
-          </a>
-         </li>
-         <li class="list-top-movie-item" id="list-top-movie-item-1">
-          <a class="list-top-movie-link" href="/phim-moi/ke-cuong-ghen" title="Kẻ Cuồng Ghen">
-           <span class="status">
-            HD Thuyết Minh
-           </span>
-           <div class="list-top-movie-item-thumb" style="background-image: url('https://img.ophim.live/uploads/movies/ke-cuong-ghen-thumb.jpg')">
-           </div>
-           <div class="list-top-movie-item-info">
-            <span class="list-top-movie-item-vn">
-             Kẻ Cuồng Ghen
-            </span>
-            <span class="list-top-movie-item-en">
-             A Friend's Obsession
+             Bangkok Buddies
             </span>
             <span class="list-top-movie-item-view">
              2 lượt xem
@@ -1721,21 +1677,21 @@ window._wpemojiSettings = {"baseUrl":"https:\/\/s.w.org\/images\/core\/emoji\/15
           </a>
          </li>
          <li class="list-top-movie-item" id="list-top-movie-item-1">
-          <a class="list-top-movie-link" href="/phim-moi/bao-thu-3" title="Báo Thù">
+          <a class="list-top-movie-link" href="/phim-moi/soi-day-hoang-lan" title="Sợi Dây Hoàng Lan">
            <span class="status">
             HD Vietsub
            </span>
-           <div class="list-top-movie-item-thumb" style="background-image: url('https://img.ophim.live/uploads/movies/bao-thu-2013-thumb.jpg')">
+           <div class="list-top-movie-item-thumb" style="background-image: url('https://img.ophim.live/uploads/movies/soi-day-hoang-lan-thumb.jpg')">
            </div>
            <div class="list-top-movie-item-info">
             <span class="list-top-movie-item-vn">
-             Báo Thù
+             Sợi Dây Hoàng Lan
             </span>
             <span class="list-top-movie-item-en">
-             Oldboy
+             Sroi Sabunnga
             </span>
             <span class="list-top-movie-item-view">
-             4 lượt xem
+             2 lượt xem
             </span>
             <span class="rate-vote rate-vote-0">
             </span>
@@ -1743,18 +1699,62 @@ window._wpemojiSettings = {"baseUrl":"https:\/\/s.w.org\/images\/core\/emoji\/15
           </a>
          </li>
          <li class="list-top-movie-item" id="list-top-movie-item-1">
-          <a class="list-top-movie-link" href="/phim-moi/canh-bao-chuyen-te-nhi" title="Cảnh Báo Chuyện Tế Nhị">
+          <a class="list-top-movie-link" href="/phim-moi/kazoops-phan-1" title="Kazoops! (Phần 1)">
            <span class="status">
             HD Vietsub
            </span>
-           <div class="list-top-movie-item-thumb" style="background-image: url('https://img.ophim.live/uploads/movies/canh-bao-chuyen-te-nhi-thumb.jpg')">
+           <div class="list-top-movie-item-thumb" style="background-image: url('https://img.ophim.live/uploads/movies/kazoops-phan-1-thumb.jpg')">
            </div>
            <div class="list-top-movie-item-info">
             <span class="list-top-movie-item-vn">
-             Cảnh Báo Chuyện Tế Nhị
+             Kazoops! (Phần 1)
             </span>
             <span class="list-top-movie-item-en">
-             Park Na-rae: Glamour Warning
+             Kazoops! (Season 1)
+            </span>
+            <span class="list-top-movie-item-view">
+             1 lượt xem
+            </span>
+            <span class="rate-vote rate-vote-0">
+            </span>
+           </div>
+          </a>
+         </li>
+         <li class="list-top-movie-item" id="list-top-movie-item-1">
+          <a class="list-top-movie-link" href="/phim-moi/boi-roi-va-sung-sot" title="Bối Rối Và Sửng Sốt">
+           <span class="status">
+            HD Vietsub
+           </span>
+           <div class="list-top-movie-item-thumb" style="background-image: url('https://img.ophim.live/uploads/movies/boi-roi-va-sung-sot-thumb.jpg')">
+           </div>
+           <div class="list-top-movie-item-info">
+            <span class="list-top-movie-item-vn">
+             Bối Rối Và Sửng Sốt
+            </span>
+            <span class="list-top-movie-item-en">
+             Dazed and Confused
+            </span>
+            <span class="list-top-movie-item-view">
+             3 lượt xem
+            </span>
+            <span class="rate-vote rate-vote-0">
+            </span>
+           </div>
+          </a>
+         </li>
+         <li class="list-top-movie-item" id="list-top-movie-item-1">
+          <a class="list-top-movie-link" href="/phim-moi/dao-con-tang-ngao" title="Dao Cổn Tàng Ngao">
+           <span class="status">
+            HD Vietsub
+           </span>
+           <div class="list-top-movie-item-thumb" style="background-image: url('https://img.ophim.live/uploads/movies/dao-con-tang-ngao-thumb.jpg')">
+           </div>
+           <div class="list-top-movie-item-info">
+            <span class="list-top-movie-item-vn">
+             Dao Cổn Tàng Ngao
+            </span>
+            <span class="list-top-movie-item-en">
+             Rock Dog
             </span>
             <span class="list-top-movie-item-view">
              2 lượt xem
